--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@culturehq/charts": "^1.2.2",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.1",
     "@testing-library/jest-dom": "^5.11.4",
