--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "bootstrap": "^5.0.0-alpha3",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
