--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.21.0",
     "bootstrap": "^5.0.0-alpha3",
     "chart.js": "^2.9.4",
+    "prop-types": "^15.7.2",
+    "proptypes": "^1.1.0",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
