--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spinners": "^0.9.0",
+    "react-text-mask": "^5.4.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
