--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "bootstrap": "^5.0.0-alpha3",
+    "cep-promise": "^4.0.3",
     "chart.js": "^2.9.4",
     "prop-types": "^15.7.2",
     "proptypes": "^1.1.0",
@@ -24,6 +25,7 @@
     "react-scripts": "4.0.1",
     "react-spinners": "^0.9.0",
     "react-text-mask": "^5.4.3",
+    "redocx": "^1.1.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
